Fix login button spacing for Demian. You're welcome.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -153,6 +153,7 @@ img {max-width: 100%;}
 }
 
 /* --- MyResearch --- */
+.form-login .btn-link ~ .btn-link { padding-left: 0; }
 .myresearch-menu a {
   &:extend(.nav>li>a all);
   .badge { float: right; }
